Added tasks. Added Dockerfile
